Searchable component in create page & edit bio data css change with managedBy

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,7 @@
 
             </ul>
  
-              <div class="ng-autocomplete">
+              <div class="ng-autocomplete common-search">
                 <ng-autocomplete
                   [data]="searchUsers"
                   (inputChanged) = "onChangeSearch($event)"
