--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -20,8 +20,21 @@ a {
     margin-top: 1%;
 }
 
-.ng-autocomplete{
-    width: 400px;
+.ng-autocomplete input{
+    /* width: 400px;
+    display: block; */
+    width: 100%;
+    /* height: calc(1.5em + .75rem + 2px); */
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 .createpage-option{
     display: block;
