--- a/src/app/components/security/createpage/createpage.component.html
+++ b/src/app/components/security/createpage/createpage.component.html
@@ -34,29 +34,114 @@
                   </div> 
 
                   <div class="form-row">
-                    <div class="col form-group">
-                        <label>Party</label>
-                        <input type="text" class="form-control" placeholder="Party" formControlName="party"/>
-                      </div> 
+                     <div class="col form-group">
+                       <label class="create-page-label">Party</label>
+                        <div class="ng-autocomplete create-page">
+                          <ng-autocomplete
+                            [data]="searchUsers"
+                            placeHolder="Party"
+                            (inputChanged) = "onChangeSearch($event)"
+                            [searchKeyword]="keyword"
+                            [itemTemplate]="itemTemplate"
+                            [notFoundTemplate]="notFoundTemplate">
+                          </ng-autocomplete>
+  
+                          <ng-template #itemTemplate let-item>
+                            <div class="item">
+                              <img src="{{item.photoUrl}}" height="25">
+                              <span [innerHTML]="item.firstName"></span>
+                              <small></small>
+                            </div>
+                          </ng-template>
+                        
+                          <ng-template #notFoundTemplate let-notFound>
+                            <div [innerHTML]="notFound"></div>
+                          </ng-template>
+                        </div>
+                      </div>
+
                     </div>
 
                     <div class="form-row">
                       <div class="col form-group">
-                          <label>District</label>
-                          <input type="text" class="form-control" placeholder="District" formControlName="district"/>
-                        </div> 
+                        <label class="create-page-label">District</label>
+                        <div class="ng-autocomplete create-page">
+                          <ng-autocomplete
+                            [data]="searchUsers"
+                            placeHolder="District"
+                            (inputChanged) = "onChangeSearch($event)"
+                            [searchKeyword]="keyword"
+                            [itemTemplate]="itemTemplate"
+                            [notFoundTemplate]="notFoundTemplate">
+                          </ng-autocomplete>
+  
+                          <ng-template #itemTemplate let-item>
+                            <div class="item">
+                              <img src="{{item.photoUrl}}" height="25">
+                              <span [innerHTML]="item.firstName"></span>
+                              <small></small>
+                            </div>
+                          </ng-template>
+                        
+                          <ng-template #notFoundTemplate let-notFound>
+                            <div [innerHTML]="notFound"></div>
+                          </ng-template>
+                        </div>                        
+                      </div> 
                      </div>
                      <div class="form-row">
                       <div class="col form-group">
-                          <label>Chamber</label>
-                          <input type="text" class="form-control" placeholder="Chamber" formControlName="chamber"/>
+                        <label class="create-page-label">Chamber</label>
+                          <div class="ng-autocomplete create-page">
+                            <ng-autocomplete
+                              [data]="searchUsers"
+                              placeHolder="Chamber"
+                              (inputChanged) = "onChangeSearch($event)"
+                              [searchKeyword]="keyword"
+                              [itemTemplate]="itemTemplate"
+                              [notFoundTemplate]="notFoundTemplate">
+                            </ng-autocomplete>
+    
+                            <ng-template #itemTemplate let-item>
+                              <div class="item">
+                                <img src="{{item.photoUrl}}" height="25">
+                                <span [innerHTML]="item.firstName"></span>
+                                <small></small>
+                              </div>
+                            </ng-template>
+                          
+                            <ng-template #notFoundTemplate let-notFound>
+                              <div [innerHTML]="notFound"></div>
+                            </ng-template>
+                          </div>
                         </div> 
                   </div>
 
                   <div class="form-row">
                     <div class="col form-group">
-                        <label>State</label>
-                        <input type="text" class="form-control" placeholder="State" formControlName="state"/>
+                      <label class="create-page-label">State</label>
+                      <div class="ng-autocomplete create-page">
+                        <ng-autocomplete
+                          [data]="searchUsers"
+                          placeHolder="State"
+                          (inputChanged) = "onChangeSearch($event)"
+                          [searchKeyword]="keyword"
+                          [itemTemplate]="itemTemplate"
+                          [notFoundTemplate]="notFoundTemplate">
+                        </ng-autocomplete>
+
+                        <ng-template #itemTemplate let-item>
+                          <div class="item">
+                            <img src="{{item.photoUrl}}" height="25">
+                            <span [innerHTML]="item.firstName"></span>
+                            <small></small>
+                          </div>
+                        </ng-template>
+                      
+                        <ng-template #notFoundTemplate let-notFound>
+                          <div [innerHTML]="notFound"></div>
+                        </ng-template>
+                      </div>
                       </div> 
                    </div>
            
