--- a/src/styles.css
+++ b/src/styles.css
@@ -10067,8 +10067,8 @@ aside.sidebar.full-style {
     display: none;
 }
 .party-search{
-    width: 40% !important;
-    margin-left: 180px;
+    width: 50% !important;
+    margin-left: 23%;
     display: flex;
 }
 .save-button{
@@ -10076,10 +10076,11 @@ aside.sidebar.full-style {
     border: none !important;
     color: #007bff;
     z-index: 1;
-    /* position: absolute; */
-    margin-left: -14% !important;
-    height: 40px;
+    height: 33px;
     background-color: white;
+    position: relative;
+    top: 1px;
+    left: -13%;
 }
 .edit-button{
     cursor: pointer;
@@ -10122,4 +10123,39 @@ aside.sidebar.full-style {
 
 .container-fluid{
     padding: 0px !important;
+}
+
+.ng-autocomplete.create-page {
+    width: 100% !important;
+}
+.ng-autocomplete.common-search {
+    width: 100% !important;
+}
+/* .create-page-label{
+    padding-left: 5px;
+} */
+input:focus {
+    color: #495057 !important;
+    background-color: #fff  !important;
+    border-color: #80bdff  !important;
+    outline: 0  !important;
+    box-shadow: 0 0 0 0.2rem rgba(0,123,255,.25)  !important;
+}
+.autocomplete-container{
+    box-shadow: none !important;
+}
+input{
+    display: block;
+    /* width: 100% !important; */
+    height: calc(1.5em + .75rem + 2px) !important;
+    padding: .375rem .75rem !important;
+    font-size: 1rem !important;
+    font-weight: 400 !important;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da !important;
+    border-radius: .25rem !important;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out !important;
 }
